--- a/doc/guide/rework.tex
+++ b/doc/guide/rework.tex
@@ -1,5 +1,9 @@
 \chapter{Rework}
 
+Flux is your friend when doing rework.  However, you need to remove it
+from your board when finished.  Initially, use flux-cleaner with a
+brush and clean with a towel.  Then apply IPA and clean with towel.
+
 
 \section{Removing resistors and capacitors}
 
