--- a/doc/guide/openocd.tex
+++ b/doc/guide/openocd.tex
@@ -32,7 +32,7 @@ example,
 
 \begin{minted}{bash}
 $ telnet localhost:4444
-> monitor flash info 0
+> monitor at91sam4s info
 \end{minted}
 
 \subsection{Communicating with OpenOCD using GDB}
@@ -61,68 +61,68 @@ errors see \wikiref{OpenOCD_errors}{OpenOCD errors}.
 
 OpenOCD can program the flash program memory from a binary file.
 
-\section{FTDI support}
-\label{ftdi-support}
+%% \section{FTDI support}
+%% \label{ftdi-support}
 
-Many \wikiref{JTAG_interface}{JTAG interfaces} use chips made by Future
-Technology Devices International (FTDI) to translate between the USB and
-JTAG protocols. FTDI provide a library to communicate with these
-devices; however, this is not open-source and hence cannot be
-distributed. There is an open-source equivalent,
-\href{http://freshmeat.net/projects/libftdi/}{libftdi}, which in turn
-uses the open-source libusb. This can be temperamental to get working on
-a Windows system.
+%% Many \wikiref{JTAG_interface}{JTAG interfaces} use chips made by Future
+%% Technology Devices International (FTDI) to translate between the USB and
+%% JTAG protocols. FTDI provide a library to communicate with these
+%% devices; however, this is not open-source and hence cannot be
+%% distributed. There is an open-source equivalent,
+%% \href{http://freshmeat.net/projects/libftdi/}{libftdi}, which in turn
+%% uses the open-source libusb. This can be temperamental to get working on
+%% a Windows system.
 
-\section{Getting OpenOCD}
-\label{getting-openocd}
+%% \section{Getting OpenOCD}
+%% \label{getting-openocd}
 
-The developers of OpenOCD release source packages (and provide
-subversion access) but do not provide official builds for any
-operating system. However, there are various sites which provide
-pre-built versions of OpenOCD.
+%% The developers of OpenOCD release source packages (and provide
+%% subversion access) but do not provide official builds for any
+%% operating system. However, there are various sites which provide
+%% pre-built versions of OpenOCD.
 
-\subsection{Windows}
-\label{windows}
+%% \subsection{Windows}
+%% \label{windows}
 
-Windows installers for release versions of OpenOCD can be found
-\href{http://www.freddiechopin.info/index.php/en/download/category/4-openocd}{here}.
-Some development versions can be found
-\href{http://www.freddiechopin.info/index.php/en/download/category/10-openocd-dev}{here}.
-Unless you need a feature not present in the release version, avoid
-getting the development versions as they can be less stable.
+%% Windows installers for release versions of OpenOCD can be found
+%% \href{http://www.freddiechopin.info/index.php/en/download/category/4-openocd}{here}.
+%% Some development versions can be found
+%% \href{http://www.freddiechopin.info/index.php/en/download/category/10-openocd-dev}{here}.
+%% Unless you need a feature not present in the release version, avoid
+%% getting the development versions as they can be less stable.
 
-Alternatively, the
-\href{http://www.siwawi.arubi.uni-kl.de/avr_projects/arm_projects/}{WinARM}
-toolchain contains a version of OpenOCD, albeit one that appears (from
-the description on the project page) to be out of date. It is also
-possible to build your own copy of OpenOCD using either
-\href{http://www.mingw.org/}{MinGW} or
-\href{http://www.cygwin.com/}{Cygwin}; instructions for this are posted
-in various places online.
+%% Alternatively, the
+%% \href{http://www.siwawi.arubi.uni-kl.de/avr_projects/arm_projects/}{WinARM}
+%% toolchain contains a version of OpenOCD, albeit one that appears (from
+%% the description on the project page) to be out of date. It is also
+%% possible to build your own copy of OpenOCD using either
+%% \href{http://www.mingw.org/}{MinGW} or
+%% \href{http://www.cygwin.com/}{Cygwin}; instructions for this are posted
+%% in various places online.
 
-Realistically, it's probably easier to set up a virtual machine with
-Linux and use that instead.
+%% Realistically, it's probably easier to set up a virtual machine with
+%% Linux and use that instead.
 
-\subsection{Linux}
-\label{linux}
+%% \subsection{Linux}
+%% \label{linux}
 
-Many recent distributions of Linux have OpenOCD in their software
-repositories. However, this is often out of date and (in some cases)
-buggy. In this case it is straightforward to
-\wikiref{Building_OpenOCD_under_Linux}{build the latest version}.
+%% Many recent distributions of Linux have OpenOCD in their software
+%% repositories. However, this is often out of date and (in some cases)
+%% buggy. In this case it is straightforward to
+%% \wikiref{Building_OpenOCD_under_Linux}{build the latest version}.
 
-\subsection{Mac OSX}
-\label{mac-osx}
+%% \subsection{Mac OSX}
+%% \label{mac-osx}
 
-The easiest way to install OpenOCD on Mac OSX is to use
-\href{http://brew.sh/}{Homebrew}. If you wish to use JTAG with an
-adaptor based on a FTDI chip (for example, the UCECE USB to JTAG
-adaptor or a Bus Blaster), make sure you include libftdi support by
-installing with the command:
-%
-\begin{minted}{bash}
-$ brew install openocd --enable-ft2232_libftdi
-\end{minted}
+%% The easiest way to install OpenOCD on Mac OSX is to use
+%% \href{http://brew.sh/}{Homebrew}. If you wish to use JTAG with an
+%% adaptor based on a FTDI chip (for example, the UCECE USB to JTAG
+%% adaptor or a Bus Blaster), make sure you include libftdi support by
+%% installing with the command:
+%% %
+%% \begin{minted}{bash}
+%% $ brew install openocd --enable-ft2232_libftdi
+%% \end{minted}
 
 \section{Errors}
 \label{errors}
