Move some instructions to guide

--- a/doc/guide/guide.tex
+++ b/doc/guide/guide.tex
@@ -2,6 +2,7 @@
 \usepackage{lmodern}
 \usepackage{circuitikz}
 \usepackage{amssymb,amsmath}
+\usepackage{siunitx}
 
 % use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
