--- a/doc/guide/hardware.tex
+++ b/doc/guide/hardware.tex
@@ -134,23 +134,46 @@ The capacitor connected to the bootstrap pin must be rated for
 
 \subsection{NRF24L01+ radio}\label{nrf24l01-radio}
 
-This operates around 2.4 GHz and has 128 programmable channels, each
-of 1 MHz.  Note, some of these channels use the same spectrum as
+The nRF24 module we provide is actually a tiny PCB with all of the
+high frequency analogue components populated for you. This module
+breaks out the SPI communication pins, the power supply pins, and two
+signal pins that you will need to connect to your microcontroller. The
+CE and IRQ pins can both go to general PIO pins while the SPI pins
+(MOSI, MISO, SCLK, CSN) need to be connected to the SAM4S SPI
+peripheral.
+
+As this radio is ultimately an analogue circuit and any noise on the
+power supply can affect the signal quality, we recommend using a
+separate 3V3 regulator and using a low pass filter to provide the best
+power.  Instead of a resistor, a ferrite bead is better.
+
+\begin{figure}[h]
+  \centering
+  \begin{circuitikz}
+    \draw (-1, 0) node[left] {\SI{3.3}{\volt}} to[R=\SI{1}{\ohm}, o-] (2, 0)
+    to[C=\SI{10}{\micro\farad}, *-*] (2, -2); 
+    
+    \draw (-1, -2) node[left] {GND} to[short, o-] (2, -2); 
+    \draw (2, 0) to[short] (4, 0); 
+    \draw (2, -2) to[short] (4, -2); 
+    \draw (6, 0.5) -- (4, 0.5) -- (4, -2.5) -- (6, -2.5);
+    \node[right=0.2] at (4, 0) {VCC}; 
+    \node[right=0.2] at (4, -2) {GND}; 
+    \node at (6, -1) {nRF24};
+  \end{circuitikz}
+\end{figure}
+
+You cannot have a PCB plane near the antenna of the radio otherwise
+the \textbf{range will be severely limited}.
+
+The radio operates around 2.4 GHz and has 128 programmable channels,
+each of 1 MHz.  Note, some of these channels use the same spectrum as
 Bluetooth and WiFi.  A 5 byte address is appended to the start of each
 transmission and the receiver will only respond when the address
 matches.
 
 The radio interfaces to the SAM4S using the SPI bus. The IRQ
 pin is driven low to indicate a packet has been received.
-
-A well filtered power supply is critical otherwise the range will be
-limited on reception. Preferably, the device should have its own 3V3
-regulator with a low-pass RC filter comprised of a series resistor and
-large capacitor (say 22\,$\mu$F) or a low-pass LC filter made with a ferrite
-bead and capacitor.
-
-You cannot have a PCB plane near the antenna of the radio otherwise
-the \textbf{range will be severely limited}.
 
 
 
@@ -177,4 +200,123 @@ tens of milliseconds depending on the capacitive load and current draw.
 
 Note, some regulators have pins that you must not connect. Some have
 multiple pins for the same purpose; these must all be connected.
+
+
+\section{External components}
+
+\subsection{Battery}
+
+The Wacky Racer batteries are Turnigy 5-cell 6\,V, 2300\,mAh, NiMH
+with a three pin JST connector.  To preserve the battery life it is
+imperative to not draw current when the battery voltage is below 5\,V.
+Note, when fully charged, the battery voltage may be 7.5\,V.
+
+The battery uses a standard RC servo connector: 3 pin 0.1'' (pin 1
+GND, pin 2 5V, pin 3 NC). We suggest connecting both the first and
+third pins to ground to allow the battery to be plugged in in both
+orientations. The 461 Altium library has a component named
+`Battery\_HEADER\_3pin' that is suitable to use.
+
+\subsection{LED Tape}
+
+The LED tape is a string of WS2812 LEDs connected in a line. These LEDs use a
+clever mechanism to pass the RGB data down the string. They are connected in
+series like:
+
+\begin{figure}[h]
+  \centering
+  \begin{circuitikz}
+    
+    \draw (0, 0) node[left] {\SI{5}{\volt}} to[short, o-] (13, 0);
+    \draw (0, -4) node[left] {GND} to[short, o-] (13, -4);
+
+    \draw (1, -1) rectangle (4, -3);
+    \draw (5, -1) rectangle (8, -3);
+    \draw (9, -1) rectangle (12, -3);
+
+    \draw (0, -2) node[left] {DIN} to[short, o-] (1, -2) node[right] {DIN};
+    \draw (4, -2) node[left] {DOUT} -- (5, -2) node[right] {DIN};
+    \draw (8, -2) node[left] {DOUT} -- (9, -2) node[right] {DIN};
+    \draw (12, -2) node[left] {DOUT} -- (13, -2);
+
+    \draw (2.5, 0) -- (2.5, -1) node[below] {VCC};
+    \draw (6.5, 0) -- (6.5, -1) node[below] {VCC};
+    \draw (10.5, 0) -- (10.5, -1) node[below] {VCC};
+
+    \draw (2.5, -4) -- (2.5, -3) node[above] {GND};
+    \draw (6.5, -4) -- (6.5, -3) node[above] {GND};
+    \draw (10.5, -4) -- (10.5, -3) node[above] {GND};
+
+  \end{circuitikz}
+\end{figure}
+
+This means you will need to provide a three pin header (0.1" standard header)
+with the pinout: pin 1 \SI{5}{\volt}, pin 2 signal, pin 3 ground. Each
+individual LED has a maximum supply current of \SI{60}{\milli\ampere}
+(\SI{20}{\milli\ampere} per red, green, blue channel). We will provide up to
+half a metre of LED tape to each car or hat, giving a maximum number of 30 LEDs
+to be driven.
+
+
+\subsection{Bumper}
+
+The provided bumper senses the contact through a simple limit switch. This
+switch is normally open and on contact will close.
+
+\begin{figure}[h]
+  \centering
+  \begin{circuitikz}
+    
+    \draw (0, 0) to[short, o-*] (2, 0) to[switch] (2, -2) node[ground]{};
+    \draw (2, 0) to[R] (2, 2) node[vcc]{\SI{3.3}{\volt}};
+
+    \draw[blue, dashed] (1.5, -0.5) rectangle (2.5, -1.5);
+    \node[blue, right] at (2.5, -1) {limit switch};
+
+  \end{circuitikz}
+\end{figure}
+
+Note that the pullup resistor shown could simple be the internal pullup resistor
+on a PIO pin. The connector for the limit switch should be a simple 2 pin 0.1"
+header. 
+
+\subsection{Buzzer}
+
+The buzzers supplied are passive piezo-electric devices. Applying a voltage
+across the two terminals causes the element to deform. Applying an alternating
+current to the device generates an audible tone. The larger the applied voltage
+differential, the louder the tone becomes. There are plenty of example circuits
+for piezo buzzers available online.
+
+\subsection{Motors}
+
+The motors available in the provided chassis are \SI{6}{\volt} DC motors. These
+have a low DC resistance and will take as much current as the DRV8833 motor
+driver can supply. You need to add connectors for the motors, either 2 pin 0.1"
+headers or screw terminals are suggested.
+
+
+\subsection{Connectors}
+
+\begin{enumerate}
+\item USB micro or mini connector for debugging
+\item 3 pin 0.1'' for LED tape (pin 1 5\,V, pin 2 signal, pin 3 ground)
+\item 2 pin 0.1'' for bumper (pin 1 switch, pin 2 ground)
+\item 10 pin IDE for serial wire debug
+\item 3 pin JR battery connector (pin 1 GND, pin 2 VBAT, pin 3 GND)
+\item motor connectors (for Racer)
+\item connectors for dastardly stuff
+\end{enumerate}
+
+
+\section{Other components}
+
+\begin{enumerate}
+\item We recommend that you use components in the ECE Altium library.
+  These are stocked in the SMT lab.  For any other components you may
+  require, see Scott Lloyd in the SMT lab.
+\end{enumerate}
+
+
+
 
